[gd_scene load_steps=8 format=3 uid="uid://dwlc1o7u3x4hu"]

[ext_resource type="Script" path="res://deckbuilder/DeckBuilderCard.gd" id="1_1yp43"]
[ext_resource type="LabelSettings" uid="uid://dq5kctg5dkitl" path="res://styling/labels/AnimalLabel.tres" id="2_p50dq"]
[ext_resource type="LabelSettings" uid="uid://nx6f46ywtswa" path="res://styling/labels/MagicLabel.tres" id="3_t6kp8"]
[ext_resource type="LabelSettings" uid="uid://ihox33scd0t8" path="res://styling/labels/NatureLabel.tres" id="4_r3mc7"]
[ext_resource type="LabelSettings" uid="uid://bpbd72h7s4e60" path="res://styling/labels/RobotLabel.tres" id="5_opv2x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c565y"]
bg_color = Color(0.295793, 0.152218, 0.0434451, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pqrmm"]
bg_color = Color(0.741385, 0.741385, 0.741384, 1)

[node name="DeckbuilderCard" type="HBoxContainer"]
custom_minimum_size = Vector2(250, 40)
script = ExtResource("1_1yp43")

[node name="NLabel" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "1"

[node name="CardContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="CardBackground" type="Panel" parent="CardContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_c565y")

[node name="Vbox" type="VBoxContainer" parent="CardContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TopInfo" type="HBoxContainer" parent="CardContainer/Vbox"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="CardNameBG" type="Panel" parent="CardContainer/Vbox/TopInfo"]
show_behind_parent = true
custom_minimum_size = Vector2(160, 30)
layout_mode = 2
mouse_filter = 2

[node name="CardName" type="Label" parent="CardContainer/Vbox/TopInfo/CardNameBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Animal"
autowrap_mode = 3

[node name="Costs" type="Panel" parent="CardContainer/Vbox/TopInfo"]
show_behind_parent = true
custom_minimum_size = Vector2(60, 20)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pqrmm")

[node name="CostLabels" type="HBoxContainer" parent="CardContainer/Vbox/TopInfo/Costs"]
custom_minimum_size = Vector2(60, 20)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Animal" type="Label" parent="CardContainer/Vbox/TopInfo/Costs/CostLabels"]
layout_mode = 2
text = "1"
label_settings = ExtResource("2_p50dq")

[node name="Magic" type="Label" parent="CardContainer/Vbox/TopInfo/Costs/CostLabels"]
layout_mode = 2
text = "1"
label_settings = ExtResource("3_t6kp8")

[node name="Nature" type="Label" parent="CardContainer/Vbox/TopInfo/Costs/CostLabels"]
layout_mode = 2
text = "1"
label_settings = ExtResource("4_r3mc7")

[node name="Robot" type="Label" parent="CardContainer/Vbox/TopInfo/Costs/CostLabels"]
layout_mode = 2
text = "1"
label_settings = ExtResource("5_opv2x")

[node name="BotInfo" type="HBoxContainer" parent="CardContainer/Vbox"]
layout_mode = 2
mouse_filter = 2

[node name="CardRange" type="Label" parent="CardContainer/Vbox/BotInfo"]
layout_mode = 2
size_flags_horizontal = 0
text = "1"

[node name="BattleStats" type="Label" parent="CardContainer/Vbox/BotInfo"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8
text = "1/1"

[node name="StartCardBox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="PlusButton" type="Button" parent="StartCardBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "+"

[node name="NStartCards" type="Label" parent="StartCardBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "0"

[node name="MinusButton" type="Button" parent="StartCardBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "-"

[connection signal="gui_input" from="CardContainer" to="." method="_on_card_container_gui_input"]
[connection signal="mouse_entered" from="CardContainer" to="." method="_on_card_container_mouse_entered"]
[connection signal="mouse_exited" from="CardContainer" to="." method="_on_card_container_mouse_exited"]
[connection signal="pressed" from="StartCardBox/PlusButton" to="." method="_on_plus_button_pressed"]
[connection signal="pressed" from="StartCardBox/MinusButton" to="." method="_on_minus_button_pressed"]
